Correct GC length unit and prevent division by 0 in showObjectStatistics. https://bugs.webkit.org/show_bug.cgi?id=136340

Reviewed by Mark Hahnenberg.

* heap/HeapStatistics.cpp:
(JSC::HeapStatistics::showObjectStatistics):



Canonical link: https://commits.webkit.org/154164@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@173062 268f45cc-cd09-0410-ab3c-d52691b4dbfc